--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -13,10 +13,15 @@ server {
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
 
-  # ドキュメントルートの指定
+  #  ドキュメントルートの指定
   root /app/public;
  
-  #　リバースプロキシ設定 
+  #  リバースプロキシ設定 
+  location /health {
+    access_log off;
+    return 200 OK;
+  }
+
   location / {
         proxy_pass http://app;
   }
