--- a/docker/rails/Dockerfile
+++ b/docker/rails/Dockerfile
@@ -18,3 +18,9 @@ ADD . $APP_ROOT
 
 RUN mkdir -p tmp/sockets
 RUN mkdir -p tmp/pids
+
+RUN curl https://deb.nodesource.com/setup_12.x | bash
+RUN curl https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+
+RUN apt-get update && apt-get install -y nodejs yarn postgresql-client
