--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,11 @@ jobs:
         environment:
           RAILS_ENV: test
           POSTGRES_HOST: 127.0.0.1
-      - image: circleci/postgres:9.4
+      - image: circleci/mysql:5.7
         environment:
-          POSTGRES_USER: postgres
-          POSTGRES_DB: app_test
+          MYSQL_DATABASE: myapp_test
+          MYSQL_ROOT_HOST: '%'
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
     working_directory: ~/repo
     steps:
       - checkout
