--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
+      - run:
+        name: bundler install
+        command: |
+          gem install bundler
       - run: yarn install
       - save_cache:
           paths:
