--- a/docker/rails/Dockerfile
+++ b/docker/rails/Dockerfile
@@ -24,3 +24,4 @@ RUN curl https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 
 RUN apt-get update && apt-get install -y nodejs yarn postgresql-client
+RUN gem install bundler
