--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
           POSTGRES_HOST: 127.0.0.1
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_DATABASE: myapp_test
-          MYSQL_ROOT_HOST: '%'
-          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_USER: root
+          MYSQL_PASSWORD: password
     working_directory: ~/repo
     steps:
       - checkout
@@ -39,8 +39,9 @@ jobs:
           POSTGRES_HOST: 127.0.0.1
       - image: circleci/postgres:9.4
         environment:
-          POSTGRES_USER: postgres
-          POSTGRES_DB: app_test
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_USER: root
+          MYSQL_PASSWORD: password
     working_directory: ~/repo
     steps:
       - checkout
@@ -55,8 +56,6 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      - run: bundle exec rake db:create
-      - run: bundle exec rake db:schema:load
       # Rspec
       - run:
           name: Rspec
