--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_USER: root
-          MYSQL_PASSWORD: password
+          MYSQL_DATABASE: root
     working_directory: ~/repo
     steps:
       - checkout
@@ -40,8 +39,7 @@ jobs:
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_USER: root
-          MYSQL_PASSWORD: password
+          MYSQL_DATABASE: root
     working_directory: ~/repo
     steps:
       - checkout
