テスト 修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ jobs:
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: root
+          MYSQL_USER: root
+          MYSQL_PASSWORD: password
     working_directory: ~/repo
     steps:
       - checkout
@@ -39,7 +40,8 @@ jobs:
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: root
+          MYSQL_USER: root
+          MYSQL_PASSWORD: password
     working_directory: ~/repo
     steps:
       - checkout
