修正 テスト

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
           MYSQL_HOST: 127.0.0.1
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_USER: root
+          MYSQL_USERNAME: root
           MYSQL_PASSWORD: password
+          MYSQL_PORT: 4306
     working_directory: ~/repo
     steps:
       - checkout
@@ -39,9 +39,9 @@ jobs:
           MYSQL_HOST: 127.0.0.1
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_USER: root
+          MYSQL_USERNAME: root
           MYSQL_PASSWORD: password
+          MYSQL_PORT: 4306
     working_directory: ~/repo
     steps:
       - checkout
