--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - image: circleci/mysql:5.7
         environment:
           MYSQL_USERNAME: 'root'
-          MYSQL_PASSWORD: ''
+          MYSQL_PASSWORD: 'password'
           MYSQL_PORT: 3306
     working_directory: ~/repo
     steps:
@@ -40,7 +40,7 @@ jobs:
       - image: circleci/mysql:5.7
         environment:
           MYSQL_USERNAME: 'root'
-          MYSQL_PASSWORD: ''
+          MYSQL_PASSWORD: 'password'
           MYSQL_PORT: 3306
     working_directory: ~/repo
     steps:
