--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,11 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+      - run:
+          name: Wait for DB
+          command: dockerize -wait tcp://127.0.0.1:4306 -timeout 120s
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
       # Rspec
       - run:
           name: Rspec
