--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,9 @@ jobs:
           MYSQL_HOST: 127.0.0.1
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_USERNAME: 'root'
-          MYSQL_PASSWORD: 'password'
-          MYSQL_PORT: 4306
+          MYSQL_USERNAME: root
+          MYSQL_PASSWORD: password
+
     working_directory: ~/repo
     steps:
       - checkout
@@ -58,7 +58,8 @@ jobs:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       - run:
           name: Wait for DB
-          command: dockerize -wait tcp://127.0.0.1:4306 -timeout 120s
+          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
+
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
       # Rspec
