--- a/config/database.yml
+++ b/config/database.yml
@@ -57,3 +57,4 @@ production:
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
+  port: 3306
