--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
         environment:
           MYSQL_USERNAME: root
           MYSQL_PASSWORD: password
+          MYSQL_PORT: 4306
 
     working_directory: ~/repo
     steps:
@@ -58,7 +59,7 @@ jobs:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       - run:
           name: Wait for DB
-          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
+          command: dockerize -wait tcp://127.0.0.1:4306 -timeout 120s
 
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
