--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
           MYSQL_USERNAME: root
           MYSQL_PASSWORD: password
           MYSQL_PORT: 4306
+          MYSQL_DATABASE: WhiteWonderWall_development
 
     working_directory: ~/repo
     steps:
@@ -59,7 +60,7 @@ jobs:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       - run:
           name: Wait for DB
-          command: dockerize -wait tcp://127.0.0.1:4306 -timeout 120s
+          command: dockerize -wait tcp://127.0.0.1:4306 -timeout 10s
 
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
