--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,13 +36,14 @@ jobs:
       - image: circleci/ruby:2.7.1-node-browsers-legacy
         environment:
           RAILS_ENV: test
-          MYSQL_HOST: 127.0.0.1
+          DB_HOST: 127.0.0.1
+          DB_USERNAME: 'root'
+          DB_PASSWORD: 'rootpass'
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_USERNAME: root
-          MYSQL_PASSWORD: password
-          MYSQL_PORT: 3306
-          MYSQL_DATABASE: WhiteWonderWall_development
+          MYSQL_DATABASE: 'ci_test'
+          MYSQL_USER: 'root'
+          MYSQL_ROOT_PASSWORD: 'rootpass'
 
     working_directory: ~/repo
     steps:
