--- a/config/database.yml
+++ b/config/database.yml
@@ -14,12 +14,17 @@ default: &default #エイリアスを設定している
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: password #編集
-  host: db #編集
+  password: 
+  host: localhost #編集
 
 development:
   <<: *default #defaultブロックを挿入している
   database: WhiteWonderWall_development # DBの名前
+  username: 'root'
+  password: 'rootpass'
+  port: 3306
+  host: '127.0.0.1'
+  database: ci_test
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
