--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,8 @@ workflows:
       - rspec:
           requires: # buildが成功したら実行する
             - rubocop
-      - aws-ecr/nginx-build-and-push-image:
+      - aws-ecr/build-and-push-image:
+          name: build-and-push-image1
           account-url: AWS_ECR_ACCOUNT_URL
           region: AWS_REGION
           aws-access-key-id: AWS_ACCESS_KEY_ID
@@ -97,12 +98,13 @@ workflows:
               only: master
       - aws-ecs/deploy-service-update:
           requires:
-            - aws-ecr/nginx-build-and-push-image
+            - build-and-push-image1
           family: 'ECS' # ECSのタスク定義名
           cluster-name: '${ECS_ARN}'  #ECSのクラスターのARN
           service-name: '1'  #サービス名
           container-image-name-updates: "container=nginx,tag=${CIRCLE_SHA1}"
-      - aws-ecr/rails-build-and-push-image:
+      - aws-ecr/build-and-push-image:
+          name: build-and-push-image2
           account-url: AWS_ECR_ACCOUNT_URL
           region: AWS_REGION
           aws-access-key-id: AWS_ACCESS_KEY_ID
@@ -116,7 +118,7 @@ workflows:
               only: master
       - aws-ecs/deploy-service-update:
           requires:
-            - aws-ecr/rails-build-and-push-image
+            - build-and-push-image2
           family: 'ECS' # ECSのタスク定義名
           cluster-name: '${ECS_ARN}' #ECSのクラスターのARN
           service-name: '1' #サービス名
