--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@ default: &default #エイリアスを設定している
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: 
-  host: localhost #編集
+  password: password #編集
+  host: db #編集
 
 development:
   <<: *default #defaultブロックを挿入している
@@ -26,11 +26,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  username: 'root'
-  password: 'rootpass'
-  port: 3306
-  host: '127.0.0.1'
-  database: ci_test
+  database: WhiteWonderWall_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
