--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default #エイリアスを設定している
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: 
+  password: password
   host: db #編集
 
 development:
