--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
           MYSQL_DATABASE: 'ci_test'
           MYSQL_USER: 'root'
           MYSQL_ROOT_PASSWORD: 'password'
+          MYSQL_PASSWORD: password
 
     working_directory: ~/repo
     steps:
