--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
         environment:
           MYSQL_DATABASE: 'ci_test'
           MYSQL_USER: 'root'
-          MYSQL_ROOT_PASSWORD: 'password'
+          MYSQL_ROOT_PASSWORD: 'rootpass'
 
     working_directory: ~/repo
     steps:
