--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,8 +50,8 @@ jobs:
           MYSQL_DATABASE: 'ci_test'
           MYSQL_USER: 'root'
           MYSQL_ROOT_PASSWORD: 'rootpass'
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws_access_key_id: Rails.application.credentials[:aws][:AWS_ACCESS_KEY_ID],
+          aws_secret_access_key: Rails.application.credentials[:aws][:AWS_SECRET_ACCESS_KEY],
 
     working_directory: ~/repo
     steps:
